Investigación sobre filtros e interceptores Se investiga y prueba para controlar el acceso a peticiones que necesiten cierto estado de usuario